# text-metrics

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  stack.yaml  text-metrics.cabal
.github/workflows/: ci.yaml
Data/Text/: Metrics.hs
Data/Text/Metrics/: Internal.hs
bench/: Main.hs
bench-memory/: Main.hs
bench-speed/: Main.hs
bench/memory/: Main.hs
bench/speed/: Main.hs
cbits/: text_metrics.c  text_metrics.h
tests/: Main.hs
