name:                 text-metrics
version:              0.2.0
cabal-version:        >= 1.10
tested-with:          GHC==7.8.4, GHC==7.10.3, GHC==8.0.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/text-metrics
bug-reports:          https://github.com/mrkkrp/text-metrics/issues
category:             Text, Algorithms
synopsis:             Calculate various string metrics efficiently
build-type:           Simple
description:          Calculate various string metrics efficiently.
extra-doc-files:      CHANGELOG.md
                    , README.md
extra-source-files:   cbits/*.h

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/text-metrics.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.7 && < 5.0
                    , text             >= 0.2 && < 1.3
  if !impl(ghc >= 7.10)
    build-depends:    nats             == 1.*
  exposed-modules:    Data.Text.Metrics
  c-sources:          cbits/text_metrics.c
  include-dirs:       cbits
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      QuickCheck       >= 2.8 && < 3.0
                    , base             >= 4.7 && < 5.0
                    , hspec            >= 2.0 && < 3.0
                    , text             >= 0.2 && < 1.3
                    , text-metrics
  if !impl(ghc >= 7.10)
    build-depends:    nats             == 1.*
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

benchmark bench
  main-is:            Main.hs
  hs-source-dirs:     bench
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.7     && < 5.0
                    , criterion        >= 0.6.2.1 && < 1.2
                    , deepseq          >= 1.4     && < 1.5
                    , text             >= 0.2 && < 1.3
                    , text-metrics
  if !impl(ghc >= 7.10)
    build-depends:    nats             == 1.*
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
