name:                 text-metrics
version:              0.3.0
cabal-version:        1.18
tested-with:          GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.1
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/text-metrics
bug-reports:          https://github.com/mrkkrp/text-metrics/issues
category:             Text, Algorithms
synopsis:             Calculate various string metrics efficiently
build-type:           Simple
description:          Calculate various string metrics efficiently.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/text-metrics.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.8 && < 5.0
                    , containers       >= 0.5 && < 0.7
                    , text             >= 0.2 && < 1.3
                    , vector           >= 0.11 && < 0.13
  exposed-modules:    Data.Text.Metrics
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      QuickCheck       >= 2.8 && < 3.0
                    , base             >= 4.8 && < 5.0
                    , hspec            >= 2.0 && < 3.0
                    , text             >= 0.2 && < 1.3
                    , text-metrics
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if flag(dev) && impl(ghc >= 8.0)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
  default-language:   Haskell2010

benchmark bench-speed
  main-is:            Main.hs
  hs-source-dirs:     bench/speed
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , criterion        >= 0.6.2.1 && < 1.6
                    , deepseq          >= 1.3 && < 1.5
                    , text             >= 0.2 && < 1.3
                    , text-metrics
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

benchmark bench-memory
  main-is:            Main.hs
  hs-source-dirs:     bench/memory
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , deepseq          >= 1.3 && < 1.5
                    , text             >= 0.2 && < 1.3
                    , text-metrics
                    , weigh            >= 0.0.4
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
