cabal-version:   2.4
name:            text-metrics
version:         0.3.3
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.6.3 ghc ==9.8.2 ghc ==9.10.1
homepage:        https://github.com/mrkkrp/text-metrics
bug-reports:     https://github.com/mrkkrp/text-metrics/issues
synopsis:        Calculate various string metrics efficiently
description:     Calculate various string metrics efficiently.
category:        Text, Algorithms
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/text-metrics.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Data.Text.Metrics
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        containers >=0.5 && <0.8,
        text >=0.2 && <2.2,
        vector >=0.11 && <0.14,
        primitive >=0.9 && <0.10

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    build-depends:
        QuickCheck >=2.8 && <3,
        base >=4.15 && <5,
        hspec >=2.0 && <3,
        text >=0.2 && <2.2,
        text-metrics

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

benchmark bench-speed
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/speed
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        criterion >=0.6.2.1 && <1.7,
        deepseq >=1.3 && <1.6,
        text >=0.2 && <2.2,
        text-metrics

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

benchmark bench-memory
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/memory
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        deepseq >=1.3 && <1.6,
        text >=0.2 && <2.2,
        text-metrics,
        weigh >=0.0.4

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
